<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background2"
    android:padding="20sp"
    tools:context=".years_Activity">

    <Button
        android:id="@+id/btn_23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year_23"
        android:textSize="30sp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/btn_22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year_22"
        android:textSize="30sp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/btn_21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year_21"
        android:textSize="30sp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/btn_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year_20"
        android:textSize="30sp"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>

</LinearLayout>