<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background4"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".subject_23_8_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/subject1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject1"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="#9e9e9e"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/subject1_Q_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Question"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#800000"/>
            <Button
                android:id="@+id/subject1_A_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Answer"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#00695c"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">
        <TextView
            android:id="@+id/subject2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject2"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="#9e9e9e"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/subject2_Q_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Question"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#800000"/>
            <Button
                android:id="@+id/subject2_A_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Answer"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#00695c"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">
        <TextView
            android:id="@+id/subject3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject3"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="#9e9e9e"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/subject3_Q_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Question"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#800000"/>
            <Button
                android:id="@+id/subject3_A_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Answer"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#00695c"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">
        <TextView
            android:id="@+id/subject4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject4"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="#9e9e9e"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/subject4_Q_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Question"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#800000"/>
            <Button
                android:id="@+id/subject4_A_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Answer"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#00695c"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/subject5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject5"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:background="#9e9e9e"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/subject5_Q_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Question"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#800000"/>
            <Button
                android:id="@+id/subject5_A_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Answer"
                android:layout_weight="1"
                android:textSize="25dp"
                android:backgroundTint="#00695c"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>